# study-agent

./: .env.example  .gitignore  AGENTS.md  BLOCKED_REAL_INTEGRATION_REPORT.md  DESIGN_INTEGRATION_REPORT.md  RUN_REPORT.md  _diag_fission.mjs  _quick_check.mjs  _screenshot_english.mjs  docker-compose.yml  fix-colors.sh  fix-english-colors.py  fix-english.sh  fix-englishworkspace.sh  fix-everything.py  fix-fission-canvas.py  fix-fission-colors.py  fix-fission-graph.py  fix-fission-light.py  fix-fission-theme.py  fix-resize.py  fix-semantic-colors.sh  fix-semantic-detail.sh  fix-worddetail.sh  fix-wordlist.sh  fix_center.py  learnforge-v2-product  package-lock.json  package.json  patch_center.py  patch_click.py  patch_css.py  patch_dimmed.py  patch_english.py  patch_english_perfect.py  patch_notebook_glass.css  patch_onboarding.py  patch_shell.py  patch_shell_topbar.cjs  patch_theme.cjs  (+10 more)
services/api/: ocr_script.py  pyproject.toml
services/api/app/: __init__.py  auth.py  english_word_service.py  main.py  notebooklm_context.py  notebooklm_service.py  onboarding.py
services/api/hermes_profile/: SOUL.md
services/api/learnforge_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/tests/: conftest.py  test_agents_and_skills.py  test_auth_onboarding.py  test_chat_message_links.py  test_component_naming.py  test_config_env.py  test_cram_engine.py  test_database_schema.py  test_edumem0_policies.py  test_gateway_status.py  test_health_routes.py  test_hermes_runtime_status.py  test_hermes_skill_files.py  test_hermes_subprocess_streaming.py  test_memory_closed_loop.py  test_memory_end_to_end.py  test_memory_security_isolation.py  (+5 more)
(+423 files in other folders)
