[project]
name = "learnforge-api"
version = "0.1.0"
description = "LearnForge V2 FastAPI service"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.35.0",
  "fastapi>=0.115.12",
  "hermes-agent>=0.14.0",
  "httpx>=0.28.1",
  "pillow>=10.4.0",
  "pypdf>=5.0.0",
  "pydantic>=2.11.5",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.1.0",
  "uvicorn[standard]>=0.34.2"
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2.9"
]
hermes = [
]
test = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0"
]

[build-system]
requires = ["setuptools>=78.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["hermes_profile*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
